refactor remove parenteses desnecessarios nos controllers e refatora classe de exportação para sheets conforme code review